--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -28,4 +28,7 @@ jobs:
         run: deno lint
 
       - name: Run tests
-        run: deno test --allow-none
+        run: deno task test
+
+      - name: Run type check
+        run: deno check *.ts
